--- a/src/main/resources/templates/your-reservation.html
+++ b/src/main/resources/templates/your-reservation.html
@@ -14,7 +14,7 @@
 
     <div class = "your-main" th:object="${reservation}">
         <!--/*@thymesVar id="reservations" type=""*/-->
-        <section class="reservationEntity-info text-lg-left">
+        <section class="reservation-info text-lg-left">
             <h2 th:text="'Thank you for your reservation!' "> </h2>
             <p>You have reservation of the name:
                 <span th:text="*{name}" id="name"></span>
