--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -275,24 +275,27 @@ footer {
     padding: 20px;
     border-radius: 10px;
     margin-left: 10px;
-    margin-top: 10%;
+    margin-top: 10px;
+    max-width: 50%;
 }
 
 .reservation-info {
     position: relative;
     grid-column: 1;
     grid-row: auto;
-    color: #000;!important;
+    color: #000 !important;
     text-align: left;
+    padding-left: 30px !important;
+
 }
 
 .reservation-specialRequest {
     grid-column: 2/4;
     grid-row: 2;
 }
-.reservationEntity-info span{
+.reservation-info span{
     font-weight: bold;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .comments {
